Revert "edited mobile menu and text of content"
This reverts commit 32b47f86d5d0c7a8856c4a31f25dfd1c63953f21.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                 <div class="content">
                                     <span class="year">Высокий доход</span>
                                     <p class="description des-right">
-                                        Работая у нас ты сможешь реализовать свои мечты! Имея стабильную зарплату от 5 000$ ежемесячно тебе не придёться копить деньги, просто работай и получай то, чего желаешь.
+                                        Работая у нас ты сможешь реализовать свои мечты! Имея стабильную зарплату от 5 000$ ежемесячно ебе не придёться копить деньги, просто работай и получай то, чего желаешь.
                                     </p>
                                     <div class="icon"><span></span></div>
                                 </div>
@@ -230,7 +230,7 @@
                                 <div class="content">
                                     <span class="year">Безопасность</span>
                                     <p class="description des-right">
-                                        С нами ты будешь в полной безопасности, так как наше агентство имеет круглосуточную поддержку, собственную службу безопасности и надёжную систему проверки клиентов.
+                                        С нами ты будешь в полной безопасности, так как наше агентство имеет круглосуточная поддержку, собственнау службу безопасности и надёжнау систему проверки клиентов.
                                     </p>
                                     <div class="icon"><span></span></div>
                                 </div>
@@ -316,7 +316,7 @@
                 <div class="col-xl-4 pl-5 req-block text-center">
                     <span>- 3 -</span>
                     <div class="header">от 40 кг</div>
-                    Оптимальный вес для работы в сфере эскорт услуг от 40 до 65 кг. Наши модели должны быть стройными и не иметь лишнего веса.
+                    Оптимальный вес для работы в сфере эскорт от 40 до 65 кг. Наши модели должны быть стройными и не иметь лишнего веса.
                 </div>
             </div>
             <div class="row mt-5 d-none d-xl-flex req-block justify-content-center">
@@ -325,8 +325,8 @@
                     и большие заработки.
                 </div>
                 <div class="size pl-4 col-xl-5">
-                    <span>ПРИВЛЕКАТЕЛЬНОСТЬ</span> - ухоженный и опрятный внешний вид будет ключиком к успеху в эскорт бизнесе. Мы не откроем Америку, если скажем, что мужчины любят опрятных и стильных девушек, именно эти вещи чаще всего привлекают наших
-                    клиентов.
+                    <span>ПРИВЛЕКАТЕЛЬНОСТЬ</span> - ухожанный и опрятный внешний вид будет ключиком к успеху в эскортном бизнесе. Мы не откроем Америку, если скажем, что мужчины любят опрятных и стильных девушек, именно эти вещи чаще всего привлекают
+                    наших клиентов.
                 </div>
             </div>
             <div class="d-xl-none requirements content-center">
@@ -402,7 +402,7 @@
                 <div class="col-xl-8">
                     <div class="section_tittle text-center">
                         Анкета
-                        <p class="text-center">Начни реализовывать свои мечты в жизнь, остальные заботы мы берем на себя.</p>
+                        <p class="text-center">Начни реализововать свои мечты в жизнь, остальные заботы мы берем на себя.</p>
                     </div>
                 </div>
             </div>
@@ -514,8 +514,8 @@
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    Работа в эскорт агентстве — это сопровождение состоятельных мужчин на различных мероприятиях. Встречи с успешными и влиятельными людьми, представителями собственного бизнеса, медиа и спорт элиты. Также у мужчин часто возникает желание просто отдохнуть
-                                    или повеселиться, а наше агентство уже подбирает для них желанную спутницу.
+                                    Работа в эскорт агентстве — это сопровождение состоятельных мужчин на различных мероприятиях. Встречи с успешными и влиятельными людьми, представителями собственного бизнеса, медиа и спорт элиты. Также у мужчин часто возникает желаниеросто отдохнуть или
+                                    повеселиться, а наше агентство уже подбирает для них желанную спутницу.
                                 </div>
                             </div>
                         </div>
