--- a/requirements.html
+++ b/requirements.html
@@ -208,7 +208,7 @@
                 <div class="col-xl-4">
                     <span>Отсутствие комплексов</span>
                     <div class="req-box-hr"></div>
-                    <p>Чрезмерная застенчивость может только помешать вашей карьере</p>
+                    <p>Чрезмерная застенчевость может только помешать вашей карьере</p>
                 </div>
                 <div class="col-xl-4 mb-xl-5">
                     <span>Общительность</span>
@@ -250,7 +250,7 @@
                 <div class="col">
                     <span>Отсутствие комплексов</span>
                     <div class="req-box-hr"></div>
-                    <p>Чрезмерная застенчивость может только помешать вашей карьере</p>
+                    <p>Чрезмерная застенчевость может только помешать вашей карьере</p>
                 </div>
                 <div class="col mb-xl-5">
                     <span>Общительность</span>
@@ -348,7 +348,7 @@
                 <div class="col-xl-8">
                     <div class="section_tittle text-center">
                         Анкета
-                        <p class="text-center">Начни реализовывать свои мечты в жизнь, остальные заботы мы берем на себя.</p>
+                        <p class="text-center">Начни реализововать свои мечты в жизнь, остальные заботы мы берем на себя.</p>
                     </div>
                 </div>
             </div>
