--- a/requirements.html
+++ b/requirements.html
@@ -134,7 +134,7 @@
                 <div class="modal-header" style="border:0;">
                     <button type="button" class="btn btn-link menu-close" data-dismiss="modal"><img src="./img/icon/close.svg"></button>
                 </div>
-                <div class="modal-body text-center">
+                <div class="modal-body mod-menu text-center">
                     <ul style="list-style-type:none;">
                         <li><a class="nav-link" href="index.html">Главная</a></li>
                         <li><a class="nav-link" href="about.html">Об агентстве</a></li>
