--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,12 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Premium Escort - Политика конфиденциальности</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/fontawesome-free-5.13.0-web/css/all.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="icon" type="image/png" href="./img/favicon.png">
+    <!-- style CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fonts/fontawesome-free-5.13.0-web/css/all.css">
+    <!-- scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <!-- Website Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body id="home">
@@ -238,7 +250,7 @@
         <button id="btn-share" class="btn btn-primary btn-social"><i class="btn-social-main fa fa-phone-alt"></i></button>
     </div>
     <!-- Back to top button -->
-    <button id="back-to-top" class="btn btn-primary back-to-top" role="button" title="Наверх" data-toggle="tooltip" data-placement="left"><i class="fa fa-long-arrow-alt-up"></i></button>
+    <button id="back-to-top" class="btn btn-primary back-to-top" role="button" title="Наверх" data-toggle="tooltip" data-placement="left"><i class="fa fa-chevron-up"></i></button>
     <!-- The Modal "Контакты" -->
     <div class="modal fade" id="ModalPhones">
         <div class="modal-dialog modal-dialog-centered">
