removed styles in: about.css advantages.css style.css

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                         <div class="col-12 d-block d-sm-none">
                             <p>Как же я устала искать работу, где платили бы более или менее приличные деньги. Особенно сейчас все требуют образование и опыт в серьезной компании. Решила обратиться в агентство, где обещали помочь. Поначалу домашним не решилась
                                 ра
-                                <span id="dots1">...</span><span id="more1">ссказывать, чтобы не сглазить, вдруг все получится не так, как мне обещали. Спустя месяц посмелела и рассказала маме, она сначала ругалась, а потом успокоилась, ну где еще такие деньги заработать. Думаю о будущем, о семье, но пока нет своего жилья, собственную семью заводить нет смысла. Пробуйте и у вас получится, как говорится, кто не рискует… Ведь молодость одна и нужно позаботиться о том, как жить дальше. Все в ваших руках, девченки!</span>                                <a id="myBtn1" onclick="readMore('dots1' , 'more1' , 'myBtn1')">Показать полностью</a></p>
+                                <span id="dots1">...</span><span id="more1">сказывать, чтобы не сглазить, вдруг все получится не так, как мне обещали. Спустя месяц посмелела и рассказала маме, она сначала ругалась, а потом успокоилась, ну где еще такие деньги заработать. Думаю о будущем, о семье, но пока нет своего жилья, собственную семью заводить нет смысла. Пробуйте и у вас получится, как говорится, кто не рискует… Ведь молодость одна и нужно позаботиться о том, как жить дальше. Все в ваших руках, девченки!</span>                                <a id="myBtn1" onclick="readMore('dots1' , 'more1' , 'myBtn1')">Показать полностью</a></p>
                         </div>
                     </div>
                 </div>
