--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -255,13 +255,14 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <div class="modal-title">Заказать звонок</div>
+                    <div class="modal-title">ЗАКАЗАТЬ ЗВОНОК</div>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
+
                 </div>
                 <!-- Modal body -->
                 <div class="modal-body">
                     <form id="fcallback" class="contact-form">
-                        <div class="row">
+                        <div class="fcallInp">
                             <div class="col form-field col x-50">
                                 <input name="name" placeholder="Имя" type="text" required>
                             </div>
@@ -270,63 +271,14 @@
                             </div>
                         </div>
                         <div class="form-field col x-100 align-center">
-                            <div id="callbackResult">
+                            <div>
                                 <button class="boot" onclick="ajaxFormRequest('fcallback', 'php/form-callback.php')">Отправить</button>
+                                <p>Мы свяжемся с тобой в ближайшее время.</p>
                             </div>
                         </div>
                     </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Modal "Заполнить анкету" -->
-    <div class="modal fade" id="ModalAnketa">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <div class="modal-title">Анкета</div>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <!-- Modal body -->
-                <div class="modal-body text-center">
-                    <form id="fprofile-modal" action="php/form-profile.php" method="post" enctype="multipart/form-data">
-                        <div class="row">
-                            <div class="col">
-                                <input name="name" placeholder="Имя" type="text" required>
-                                <input name="phone" placeholder="Телефон" type="password" required>
-                                <input name="city" placeholder="Город проживания" type="text" required>
-                            </div>
-                            <div class="col">
-                                <input name="age" placeholder="Возраст (от 18 лет)" type="text" required>
-                                <input name="insta" placeholder="Instagram (необязательно)" type="text">
-                                <label>Есть ли опыт?</label><br>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline1" name="exp" class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline1">Да</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline2" name="exp" class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline2">Нет</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal-h text-center">Добавь пару своих фото</div><br>
-                        <div class="row justify-content-center">
-                            <div class="col-5">
-                                Фото в полный рост
-                                <input id="filemodal1" type="file" name="file[]" class="inputfile" />
-                                <label for="filemodal1"><img alt="" src="./img/icon/add.svg"></label>
-                            </div>
-                            <div class="col-5">
-                                Фото с других ракурсов
-                                <input id="filemodal2" type="file" name="file[]" class="inputfile" />
-                                <label for="filemodal2"><img alt="" src="./img/icon/add.svg"></label>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="profileModalResult"><button class="boot" type="button" onclick="ajaxFormRequest('profileModalResult', 'fprofile-modal', 'php/form-profile.php')">Отправить</button></div>
-                    </form>
+
+                    <div id="callbackResult"></div>
                 </div>
             </div>
         </div>
