commented out trash styles

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -78,15 +78,15 @@
                 <div class="modal-header" style="border:0;">
                     <button type="button" class="btn btn-link menu-close" data-dismiss="modal"><img src="./img/icon/close.svg"></button>
                 </div>
-                <div class="modal-body text-center" data-dismiss="modal">
+                <div class="modal-body mod-menu text-center">
                     <ul style="list-style-type:none;">
-                        <li><a class="nav-link" href="index.html">Главная</a></li>
+                        <li><a class="nav-link active" href="index.html">Главная</a></li>
                         <li><a class="nav-link" href="about.html">Об агентстве</a></li>
                         <li><a class="nav-link" href="advantages.html">Почему мы?</a></li>
                         <li><a class="nav-link" href="requirements.html">Требования</a></li>
                         <li><a class="nav-link" href="faq.html">FAQ</a></li>
-                        <li><a class="nav-link" href="#reviews">Отзывы</a></li>
-                        <li><a class="nav-link" href="#contacts">Контакты</a></li>
+                        <li><a class="nav-link hh" data-dismiss="modal" href="#reviews">Отзывы</a></li>
+                        <li><a class="nav-link hh" data-dismiss="modal" href="#contacts">Контакты</a></li>
                     </ul>
                 </div>
                 <a class="boot boot-mob-menu hh" href="#anketa" data-dismiss="modal">Заполнить анкету</a>
