--- a/requirements.html
+++ b/requirements.html
@@ -456,15 +456,13 @@
         </div>
     </div>
     <!-- Modal "Заполнить анкету" -->
-    <div class="modal fade" id="ModalAnketa">
+    <!-- <div class="modal fade" id="ModalAnketa">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <!-- Modal Header -->
                 <div class="modal-header">
                     <div class="modal-title">Анкета</div>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <!-- Modal body -->
                 <div class="modal-body text-center">
                     <form id="fprofile-modal" action="php/form-profile.php" method="post" enctype="multipart/form-data">
                         <div class="row">
@@ -506,7 +504,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
     <script src="js/custom.js"></script>
