--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Premium Escort - Об агентстве</title>
+    <meta name="description" content="Агентство Premium Escort основано в 2015 году в Киеве, и специализируется на оказании элитных эскорт услуг. Благодаря большой ориентированности на клиента – наше агентство занимает лидирующие позиции в сфере элитного сопровождения в Киеве.">
+    <title>Об агентстве Premium Escort в Киеве</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="./img/favicon.png">
@@ -116,7 +117,9 @@
     <section id="about" class="feature_part">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-8 section_tittle text-center">О нашем агентстве</div>
+                <div class="col-lg-8 section_tittle text-center">
+                    <h1>О нашем агентстве</h1>
+                </div>
             </div>
             <div class="about-us-desc d-none d-sm-block justify-content-center">
                 В современном мире работа в эскорте одна из самых высокооплачиваемых и престижных, ведь таких девушек часто приравнивают к профессиональным моделям. Если девушка смогла побороть в себе чувство неловкости и обратилась в эскорт агентство, то, значит, то
@@ -149,8 +152,10 @@
                 </div>
                 <div class="col-xl-4 d-none d-xl-block col-sm-none text-center">
                     <div class="about-us-middle">
-                        <span>PREMIUM ESCORT</span>
-                        <p>Эскорт агентство</p>
+                        <h2>
+                            <span>PREMIUM ESCORT</span>
+                            <p>Эскорт агентство</p>
+                        </h2>
                     </div>
                 </div>
                 <div class="col-xl-4 col-sm-12">
