--- a/advantages.html
+++ b/advantages.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Premium Escort - Преимущества</title>
+    <meta name="description" content="У нас прекрасный коллектив, душевная атмосфера и десятки перспектив для девушек. Именно работа в эскорте – это то, что тебе нужно! Гарантия высокой оплаты и анонимности прилагаются.">
+    <title>Почему мы? - Условия работы в Premium Escort</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="./img/favicon.png">
@@ -98,7 +99,7 @@
     <section id="home" class="banner_part ads">
         <div class="container align-items-center">
             <div class="head-text-ads">
-                <span>Почему Premium Escort?</span>
+                <h1>Почему Premium Escort?</h1>
                 <p class="d-none d-sm-block">Мы предлагаем хороших клиентов, высокую оплату, поддержку и безопасность. Почему эскорт агентство — это лучшее решение если вы решили заниматься эскортом? Да потому, что мы ваш надежный помощник, посредник и защитник. Мы решим все вопросы
                     по рекламе, фильтрации звонков, проведении переговоров, юридическая и силовая поддержка.</p>
                 <p class="d-block d-sm-none">Мы предлагаем хороших клиентов, высокую оплату, поддержку и безопасность. Почему эскорт агентство — это лучшее решение если вы решили заниматься эскортом? Да потому, что мы ваш надежный помощник, посредник и защитник.</p>
@@ -116,7 +117,9 @@
     <section id="why" class="feature_part">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-8 section_tittle text-center mb-xl-5">Наши преимущества</div>
+                <div class="col-lg-8 section_tittle text-center mb-xl-5">
+                    <h2>Наши преимущества</h2>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-5 col-sm-12">
@@ -189,7 +192,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8">
                     <div class="section_tittle text-center" id="reviews">
-                        Отзывы
+                        <h3> Отзывы
+                        </h3>
                         <p class="text-center">Комментарии наших моделей</p>
                     </div>
                 </div>
