--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Premium Escort - Эскорт агентство в Киеве</title>
+    <meta name="description" content="Самые часто задаваемые вопросы сотрудниц премиального эскорт агентства Premium Escort. Любой другой вопрос можно задать, воспользовавшись формой обратной связи. ">
+    <title>FAQ - Самые распространенные вопросы</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="./img/favicon.png">
@@ -99,7 +100,7 @@
     <section id="home" class="banner_part faq">
         <div class="container align-items-center">
             <div class="head-text-faq">
-                <span>Остались вопросы?</span>
+                <h1>Остались вопросы ?</h1>
                 <p>В данном разделе мы постараемся ответить на все интересующие тебя вопросы. Будь уверена, у нас нет никаких секретов и наше агентство без проблем поделится всей необходимой информацией.</p><br>
                 <a class="boot hh" href="#faq">Подробнее</a>
             </div>
@@ -117,7 +118,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8">
                     <div class="section_tittle text-center">
-                        FAQ
+                        <h2>FAQ</h2>
                         <p class="text-center">Часто задаваемые вопросы и ответы на них</p>
                     </div>
                 </div>
