--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Высокооплачиваемая работа для девушек в Киеве от лучшего эскорт агентства Киева! В Premium Escort самые выгодные условия по работе в сфере эскорта для девушек." />
+
     <title>Premium Escort - Эскорт агентство в Киеве</title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="./img/favicon.png">
@@ -98,9 +101,11 @@
     <section id="home" class="banner_part">
         <div class="container align-items-center">
             <div class="main-head-text">
-                <p>РЕАЛЬНЫЙ ЗАРАБОТОК</p>
-                <span>ОТ <b>$5000</b></span>
-                <p>ДЛЯ ДЕВУШЕК В КИЕВЕ</p>
+                <h1>
+                    РЕАЛЬНЫЙ ЗАРАБОТОК <br>
+                    <span>ОТ <b>$5000</b></span><br> ДЕВУШЕК В КИЕВЕ
+                </h1>
+                <br>
                 <a class="boot hh" href="#why">УСЛОВИЯ РАБОТЫ</a>
             </div>
             <div class="head-text-botton hh">НАСЛАЖДАЙСЯ ЖИЗНЬЮ <a class="hh" href="#about">СЕЙЧАС</a>
@@ -117,7 +122,9 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-xl-7 about_us_text">
                     <div class="about_left-side">
-                        <div class="section_tittle">О нашем агентстве</div>
+                        <div class="section_tittle">
+                            <h3>О нашем агентстве</h3>
+                        </div>
                         <div class="about_line"></div>
                         <p><span style="color: #d0bc89;font-weight: bold;">PREMIUM ESCORT</span> - это отличная возможность изменить свою привычную жизнь в лучшую сторону. Мы - ведущее агентство, расположенное в г. Киев, которое предлагает самые высокие
                             заработки в сфере эскорта. <br><br> К сожалению, в наше время много красивых девушек с финансовыми трудностями, низкооплачиваемой работой, на которой невозможно накопить на комфортную жизнь. И если ты считаешь, что достойна
@@ -174,7 +181,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8">
                     <div class="section_tittle text-center">
-                        Почему мы?
+                        <h2> Почему мы?
+                        </h2>
                         <p class="cform_footer text-center">Чертовски привлекательные условия агентства Premium Escort не оставят тебя равнодушной!</p>
                     </div>
                 </div>
@@ -286,7 +294,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-10">
                     <div class="section_tittle text-center">
-                        Требования
+                        <h2>Требования</h2>
                         <p class=" d-none d-sm-block text-center">Главное требование к кандидаткам – коммуникабельность, раскрепощенность и приятная внешность. Совсем не обязательно обладать модельными параметрами – стройной фигуры и симпатичного лица будет достаточно. Тем не менее, правило «красота
                             требует жертв» никто не отменял.</p>
                         <p class=" d-block d-sm-none text-center">Главное требование к кандидаткам – коммуникабельность, раскрепощенность и приятная внешность. Совсем не обязательно обладать модельными параметрами.</p>
@@ -392,7 +400,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8">
                     <div class="section_tittle text-center">
-                        Анкета
+                        <h2>Анкета</h2>
                         <p class="text-center">Начни реализововать свои мечты в жизнь, остальные заботы мы берем на себя.</p>
                     </div>
                 </div>
@@ -488,7 +496,8 @@
     <section id="faq" class="feature_part">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-8 section_tittle text-center">FAQ
+                <div class="col-xl-8 section_tittle text-center">
+                    <h2>FAQ</h2>
                     <p>Часто задаваемые вопросы и ответы на них</p>
                 </div>
             </div>
@@ -629,7 +638,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8">
                     <div class="section_tittle text-center">
-                        Отзывы
+                        <h3>Отзывы</h3>
+
                         <p class="text-center">Комментарии наших моделей</p>
                     </div>
                 </div>
@@ -800,7 +810,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_tittle text-center">
-                        Контакты
+                        <h3>Контакты</h3>
                         <p style="color:#ececec;" class="text-center pb-4">Мы работаем без выходных с 9:00 до 19:00</p>
                     </div>
                 </div>
@@ -832,7 +842,8 @@
                 </div>
             </div>
             <div id="writeToUs" class="writeToUs section_tittle text-center">
-                Напиши нам
+                <h2> Напиши нам
+                </h2>
             </div>
             <div class="row justify-content-center text-center">
                 <div id="fcontactAfterSend" class="feature_part">
