--- a/requirements.html
+++ b/requirements.html
@@ -5,7 +5,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Premium Escort - Об агентстве</title>
+    <meta name="description" content="Тебе достаточно быть просто милой и обаятельной девушкой, обладающей большой жизненной энергией и хорошим, позитивным настроением.
+    Будь девушкой, с которой приятно проводить время.">
+    <title>Требования девушкам, имеющим желание работать в эскорт агентстве Premium Escort</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="./img/favicon.png">
@@ -118,7 +120,8 @@
     <section id="req" class="feature_part">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col section_tittle text-center">Наши требования
+                <div class="col section_tittle text-center">
+                    <h1>Наши требования</h1>
                     <p class="text-center mb-5">Для работы в нашем агентстве тебе не обязательно быть моделью! В отличии от наших конкурентов мы даем шанс практически всем желающим попробовать себя в этом деле, но минимальные требования все же есть</p>
                 </div>
             </div>
@@ -230,7 +233,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8">
                     <div class="section_tittle text-center">
-                        Анкета
+                        <h2>Анкета</h2>
                         <p class="text-center">Начни реализововать свои мечты в жизнь, остальные заботы мы берем на себя.</p>
                     </div>
                 </div>
