add meta tags redirect .htaccess edit h1 h2 h3

--- a/advantages.html
+++ b/advantages.html
@@ -192,8 +192,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8">
                     <div class="section_tittle text-center" id="reviews">
-                        <h3> Отзывы
-                        </h3>
+                        <h3>Отзывы</h3>
                         <p class="text-center">Комментарии наших моделей</p>
                     </div>
                 </div>
