--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Высокооплачиваемая работа для девушек в Киеве от лучшего эскорт агентства Киева! В Premium Escort самые выгодные условия по работе в сфере эскорта для девушек." />
 
-    <title>Premium Escort - Эскорт агентство в Киеве</title>
+    <title>Заработная плата от $5000 — Работа для девушек в эскорт агентстве Киева</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -103,7 +103,7 @@
             <div class="main-head-text">
                 <h1>
                     РЕАЛЬНЫЙ ЗАРАБОТОК <br>
-                    <span>ОТ <b>$5000</b></span><br> ДЕВУШЕК В КИЕВЕ
+                    <span>ОТ <b>$5000</b></span><br>ДЛЯ ДЕВУШЕК В КИЕВЕ
                 </h1>
                 <br>
                 <a class="boot hh" href="#why">УСЛОВИЯ РАБОТЫ</a>
