--- a/advantages.html
+++ b/advantages.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="menu_right_block">
                         <div class="hidden menu_right_item">
-                            <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 123 45 67</a>
+                            <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 007 01 01</a>
                             <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
                         </div>
                         <a class="boot" href="index.html#anketa">Заполнить анкету</a>
@@ -371,19 +371,18 @@
     <div class="social-icons" id="s-icons">
         <ul class="navbar-nav" aria-labelledby="btn-share">
             <li>
-                <a target="_blank" href="viber://chat?number=12345678" class="btn btn-primary btn-social"><img alt="" class="btn-social-pos" src="img/icon/viber.svg"></a>
+                <a target="_blank" href="viber://chat?number=380670070101" class="btn btn-primary btn-social"><img alt="" class="btn-social-pos" src="img/icon/viber.svg"></a>
             </li>
             <li>
-                <a target="_blank" href="tg://resolve?domain=iam_ignat" class="btn btn-primary btn-social"><img alt="" class="btn-social-pos" src="img/icon/telega.svg"></a>
+                <a target="_blank" href="https://t.me/ivannaahmedova" class="btn btn-primary btn-social"><img alt="" class="btn-social-pos" src="img/icon/telega.svg"></a>
             </li>
             <li>
-                <a target="_blank" href="https://wa.me/15551234567" class="btn btn-primary btn-social"><img alt="" class="btn-social-pos" src="img/icon/whatsapp.svg"></a>
+                <a target="_blank" href="https://wa.me/380670070101" class="btn btn-primary btn-social"><img alt="" class="btn-social-pos" src="img/icon/whatsapp.svg"></a>
             </li>
             <li>
                 <a href="#ModalCallback" data-toggle="modal" class="d-none d-sm-block btn btn-primary btn-social"><img alt="" class="btn-social-pos" src="img/icon/telephone.svg"></a>
-                <a href="tel:+1234567890" class="d-block d-sm-none btn btn-primary btn-social"><img alt="" class="btn-social-pos" src="img/icon/telephone.svg"></a>
+                <a href="tel:+380670070101" class="d-block d-sm-none btn btn-primary btn-social"><img alt="" class="btn-social-pos" src="img/icon/telephone.svg"></a>
             </li>
-
         </ul>
         <button id="btn-share" class="btn btn-primary btn-social"><i class="btn-social-main fa fa-comments"></i></button>
     </div>
@@ -398,53 +397,72 @@
                     <div class="modal-title">НАШИ КОНТАКТЫ</div>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <!-- Modal body -->
                 <div class="modal-body modal-body-contact">
                     <div class="rowContact">
                         <div class="telArea">
-                            <a href="tel:+380674234567">+38 (067) 423 45 67</a>
+                            <a href="tel:+380678178021">+38 (067) 817 80 21</a>
                         </div>
                         <div class="messengerIcons">
                             <div class="messIcon">
-                                <a href="#"><img alt="" src="./img/icon/whatsappBlack.svg"></a>
+                                <a href="https://wa.me/380678178021"><img alt="" src="./img/icon/whatsappBlack.svg"></a>
                             </div>
                             <div class="messIcon">
-                                <a href="#"><img alt="" src="./img/icon/telegramBlack.svg"></a>
+                                <a href="https://t.me/ivannaahmedova"><img alt="" src="./img/icon/telegramBlack.svg"></a>
                             </div>
                             <div class="messIcon">
-                                <a href="#"><img alt="" src="./img/icon/viber-black.png"></a>
+                                <a href="viber://chat?number=380678178021"><img alt="" src="./img/icon/viber-black.png"></a>
                             </div>
                         </div>
                     </div>
                     <div class="rowContact">
                         <div class="telArea">
-                            <a href="tel:+380671353587">+38 (067) 135 35 87</a>
+                            <a href="tel:+380678204099">+38 (067) 820 40 99                                
+                            </a>
                         </div>
                         <div class="messengerIcons">
                             <div class="messIcon">
-                                <a href="#"><img alt="" src="./img/icon/whatsappBlack.svg"></a>
+                                <a href="https://wa.me/380678204099"><img alt="" src="./img/icon/whatsappBlack.svg"></a>
                             </div>
                             <div class="messIcon">
-                                <a href="#"><img alt="" src="./img/icon/telegramBlack.svg"></a>
+                                <a href="https://t.me/muchmoneyin_kiev"><img alt="" src="./img/icon/telegramBlack.svg"></a>
                             </div>
                             <div class="messIcon">
-                                <a href="#"><img alt="" src="./img/icon/viber-black.png"></a>
+                                <a href="viber://chat?number=380678204099"><img alt="" src="./img/icon/viber-black.png"></a>
                             </div>
                         </div>
                     </div>
                     <div class="rowContact">
                         <div class="telArea">
-                            <a href="tel:+380676238547">+38 (067) 623 85 47</a>
+                            <a href="tel:+380674713213">+38 (067) 471 32 13
+                            </a>
                         </div>
                         <div class="messengerIcons">
                             <div class="messIcon">
-                                <a href="#"><img alt="" src="./img/icon/whatsappBlack.svg"></a>
+                                <a href="https://wa.me/380674713213"><img alt="" src="./img/icon/whatsappBlack.svg"></a>
                             </div>
                             <div class="messIcon">
-                                <a href="#"><img alt="" src="./img/icon/telegramBlack.svg"></a>
+                                <a href="https://t.me/your_sweet_chance"><img alt="" src="./img/icon/telegramBlack.svg"></a>
                             </div>
                             <div class="messIcon">
-                                <a href="#"><img alt="" src="./img/icon/viber-black.png"></a>
+                                <a href="viber://chat?number=380674713213"><img alt="" src="./img/icon/viber-black.png"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rowContact">
+                        <div class="telArea">
+                            <a href="tel:+380670070101">
+                                +38 (067) 007 01 01                          
+                            </a>
+                        </div>
+                        <div class="messengerIcons">
+                            <div class="messIcon">
+                                <a href="https://wa.me/380670070101"><img alt="" src="./img/icon/whatsappBlack.svg"></a>
+                            </div>
+                            <div class="messIcon">
+                                <a href="https://t.me/ivannaahmedova"><img alt="" src="./img/icon/telegramBlack.svg"></a>
+                            </div>
+                            <div class="messIcon">
+                                <a href="viber://chat?number=380670070101"><img alt="" src="./img/icon/viber-black.png"></a>
                             </div>
                         </div>
                     </div>
