--- a/404.html
+++ b/404.html
@@ -100,7 +100,7 @@
     <div class="content">
         <span>404</span>
         <p>Такой страницы не существует</p>
-        <a class="button" href="index.html">На главную</a>
+        <a class="button" href="/">На главную</a>
     </div>
 </body>
 </html>
