--- a/faq.html
+++ b/faq.html
@@ -82,16 +82,16 @@
                 </div>
                 <div class="modal-body mod-menu text-center">
                     <ul style="list-style-type:none;">
-                        <li><a class="nav-link" href="index.html">Главная</a></li>
+                        <li><a class="nav-link" href="/">Главная</a></li>
                         <li><a class="nav-link" href="about.html">Об агентстве</a></li>
                         <li><a class="nav-link" href="advantages.html">Почему мы?</a></li>
                         <li><a class="nav-link" href="requirements.html">Требования</a></li>
                         <li><a class="nav-link active" href="faq.html">FAQ</a></li>
-                        <li><a class="nav-link" href="index.html#reviews">Отзывы</a></li>
-                        <li><a class="nav-link" href="index.html#contacts">Контакты</a></li>
+                        <li><a class="nav-link" href="/#reviews">Отзывы</a></li>
+                        <li><a class="nav-link" href="/#contacts">Контакты</a></li>
                     </ul>
                 </div>
-                <a class="boot boot-mob-menu hh" href="#anketa" data-dismiss="modal">Заполнить анкету</a>
+                <a class="boot boot-mob-menu hh" href="/#anketa" data-dismiss="modal">Заполнить анкету</a>
             </div>
         </div>
     </div>
@@ -358,11 +358,11 @@
             <div class="col flex-column text-center pt-md-5">
                 <span>Premium Escort</span>
                 <ul class="social_link d-flex justify-content-center">
-                    <li><a href="#"><i class="fab fa-2x fa-vk"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-pinterest"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-vk"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-instagram"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-facebook"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-linkedin"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-pinterest"></i></a></li>
                 </ul>
                 <p>Мы не несём ответственность за рекламодателей, моделей и их материалы. На сайте представлены картинки типажей внешности. От 18 лет. Все знакомства / встречи проходят строго обоюдно.</p>
                 <a class="pol" href="privacy-policy.html">Политика конфиденциальности</a>
