--- a/requirements.html
+++ b/requirements.html
@@ -26,9 +26,9 @@
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-xl navbar-dark">
-                    <a class="d-none d-xl-block navbar-brand" href="index.html#home">PREMIUM<span>ESCORT
+                    <a class="d-none d-xl-block navbar-brand" href="/#home">PREMIUM<span>ESCORT
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
-                    <a class="d-xl-none navbar-brand-mob" href="index.html#home">PREMIUM ESCORT</a>
+                    <a class="d-xl-none navbar-brand-mob" href="/#home">PREMIUM ESCORT</a>
                     <div class="row mob-menu-icons">
                         <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                         <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
                         <div class="collapse navbar-collapse main-menu-item justify-content-center" id="navbarSupportedContent">
                             <ul class="navbar-nav menu align-items-center">
                                 <li class="nav-item">
-                                    <a class="nav-link " href="index.html">Главная</a>
+                                    <a class="nav-link " href="/">Главная</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link " href="about.html">Об агентстве</a>
@@ -53,10 +53,10 @@
                                     <a class="nav-link" href="faq.html">FAQ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html#reviews">Отзывы</a>
+                                    <a class="nav-link" href="/#reviews">Отзывы</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html#contacts">Контакты</a>
+                                    <a class="nav-link" href="/#contacts">Контакты</a>
                                 </li>
                             </ul>
                         </div>
@@ -66,7 +66,7 @@
                             <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg">+38 (067) 007 01 01</a>
                             <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
                         </div>
-                        <a class="boot" href="index.html#anketa">Заполнить анкету</a>
+                        <a class="boot" href="/#anketa">Заполнить анкету</a>
 
 
                     </div>
@@ -84,16 +84,16 @@
                 </div>
                 <div class="modal-body mod-menu text-center">
                     <ul style="list-style-type:none;">
-                        <li><a class="nav-link" href="index.html">Главная</a></li>
+                        <li><a class="nav-link" href="/">Главная</a></li>
                         <li><a class="nav-link" href="about.html">Об агентстве</a></li>
                         <li><a class="nav-link" href="advantages.html">Почему мы?</a></li>
                         <li><a class="nav-link active" href="requirements.html">Требования</a></li>
                         <li><a class="nav-link" href="faq.html">FAQ</a></li>
-                        <li><a class="nav-link" href="index.html#reviews">Отзывы</a></li>
-                        <li><a class="nav-link" href="index.html#contacts">Контакты</a></li>
+                        <li><a class="nav-link" href="/#reviews">Отзывы</a></li>
+                        <li><a class="nav-link" href="/#contacts">Контакты</a></li>
                     </ul>
                 </div>
-                <a class="boot boot-mob-menu hh" href="#anketa" data-dismiss="modal">Заполнить анкету</a>
+                <a class="boot boot-mob-menu hh" href="/#anketa" data-dismiss="modal">Заполнить анкету</a>
             </div>
         </div>
     </div>
@@ -324,11 +324,11 @@
             <div class="col flex-column text-center pt-md-5">
                 <span>Premium Escort</span>
                 <ul class="social_link d-flex justify-content-center">
-                    <li><a href="#"><i class="fab fa-2x fa-vk"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-pinterest"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-vk"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-instagram"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-facebook"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-linkedin"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-pinterest"></i></a></li>
                 </ul>
                 <p>Мы не несём ответственность за рекламодателей, моделей и их материалы. На сайте представлены картинки типажей внешности. От 18 лет. Все знакомства / встречи проходят строго обоюдно.</p>
                 <a class="pol" href="privacy-policy.html">Политика конфиденциальности</a>
