--- a/advantages.html
+++ b/advantages.html
@@ -25,9 +25,9 @@
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-xl navbar-dark">
-                    <a class="d-none d-xl-block navbar-brand" href="index.html#home">PREMIUM<span>ESCORT
+                    <a class="d-none d-xl-block navbar-brand" href="/#home">PREMIUM<span>ESCORT
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
-                    <a class="d-xl-none navbar-brand-mob" href="index.html#home">PREMIUM ESCORT</a>
+                    <a class="d-xl-none navbar-brand-mob" href="/#home">PREMIUM ESCORT</a>
                     <div class="mob-menu-icons">
                         <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                             <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
                         <div class="collapse navbar-collapse main-menu-item justify-content-center" id="navbarSupportedContent">
                             <ul class="navbar-nav menu align-items-center">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Главная</a>
+                                    <a class="nav-link" href="/">Главная</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about.html">Об агентстве</a>
@@ -52,10 +52,10 @@
                                     <a class="nav-link" href="faq.html">FAQ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html#reviews">Отзывы</a>
+                                    <a class="nav-link" href="/#reviews">Отзывы</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html#contacts">Контакты</a>
+                                    <a class="nav-link" href="/#contacts">Контакты</a>
                                 </li>
                             </ul>
                         </div>
@@ -65,7 +65,7 @@
                             <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 007 01 01</a>
                             <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
                         </div>
-                        <a class="boot" href="index.html#anketa">Заполнить анкету</a>
+                        <a class="boot" href="/#anketa">Заполнить анкету</a>
                     </div>
                 </nav>
             </div>
@@ -81,13 +81,13 @@
                 </div>
                 <div class="modal-body mod-menu text-center">
                     <ul style="list-style-type:none;">
-                        <li><a class="nav-link" href="index.html">Главная</a></li>
+                        <li><a class="nav-link" href="/">Главная</a></li>
                         <li><a class="nav-link" href="about.html">Об агентстве</a></li>
                         <li><a class="nav-link active" href="advantages.html">Почему мы?</a></li>
                         <li><a class="nav-link" href="requirements.html">Требования</a></li>
                         <li><a class="nav-link" href="faq.html">FAQ</a></li>
-                        <li><a class="nav-link" href="index.html#reviews">Отзывы</a></li>
-                        <li><a class="nav-link" href="index.html#contacts">Контакты</a></li>
+                        <li><a class="nav-link" href="/#reviews">Отзывы</a></li>
+                        <li><a class="nav-link" href="/#contacts">Контакты</a></li>
                     </ul>
                 </div>
                 <a class="boot boot-mob-menu hh" href="#ModalAnketa" data-dismiss="modal">Заполнить анкету</a>
@@ -172,7 +172,7 @@
                         Для работы в нашем агентстве тебе не обязательно быть моделью! В отличии от наших конкурентов мы даем шанс практически всем желающим попробовать себя в этом деле, но минимальные требования все же есть
                         <div class="mt-3 d-flex justify-content-center">
                             <a class="boot btn-pos mr-lg-1 d-none d-sm-block" href="requirements.html">Наши требования</a>
-                            <a class="boot btn-pos ml-lg-1" href="index.html#anketa">Заполнить анкету</a>
+                            <a class="boot btn-pos ml-lg-1" href="/#anketa">Заполнить анкету</a>
                         </div>
                     </div>
                 </div>
@@ -356,11 +356,11 @@
             <div class="col flex-column text-center pt-md-5">
                 <span>Premium Escort</span>
                 <ul class="social_link d-flex justify-content-center">
-                    <li><a href="#"><i class="fab fa-2x fa-vk"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-pinterest"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-vk"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-instagram"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-facebook"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-linkedin"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-pinterest"></i></a></li>
                 </ul>
                 <p>Мы не несём ответственность за рекламодателей, моделей и их материалы. На сайте представлены картинки типажей внешности. От 18 лет. Все знакомства / встречи проходят строго обоюдно.</p>
                 <a class="pol" href="privacy-policy.html">Политика конфиденциальности</a>
