--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-xl navbar-dark">
-                    <a class="d-none d-xl-block navbar-brand" href="index.html#home">PREMIUM<span>ESCORT
+                    <a class="d-none d-xl-block navbar-brand" href="/#home">PREMIUM<span>ESCORT
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
-                    <a class="d-xl-none navbar-brand-mob" href="index.html#home">PREMIUM ESCORT</a>
+                    <a class="d-xl-none navbar-brand-mob" href="/#home">PREMIUM ESCORT</a>
                     <div class=" mob-menu-icons">
                         <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                             <span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
                             <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 007 01 01</a>
                             <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
                         </div>
-                        <a class="boot" href="index.html#anketa">Заполнить анкету</a>
+                        <a class="boot" href="#anketa">Заполнить анкету</a>
                     </div>
                 </nav>
             </div>
@@ -83,16 +83,16 @@
                 </div>
                 <div class="modal-body mod-menu text-center">
                     <ul style="list-style-type:none;">
-                        <li><a class="nav-link active" href="index.html">Главная</a></li>
+                        <li><a class="nav-link active" href="/">Главная</a></li>
                         <li><a class="nav-link" href="about.html">Об агентстве</a></li>
                         <li><a class="nav-link" href="advantages.html">Почему мы?</a></li>
                         <li><a class="nav-link" href="requirements.html">Требования</a></li>
                         <li><a class="nav-link" href="faq.html">FAQ</a></li>
-                        <li><a class="nav-link hh" data-dismiss="modal" href="#reviews">Отзывы</a></li>
-                        <li><a class="nav-link hh" data-dismiss="modal" href="#contacts">Контакты</a></li>
+                        <li><a class="nav-link hh" data-dismiss="modal" href="/#reviews">Отзывы</a></li>
+                        <li><a class="nav-link hh" data-dismiss="modal" href="/#contacts">Контакты</a></li>
                     </ul>
                 </div>
-                <a class="boot boot-mob-menu hh" href="#anketa" data-dismiss="modal">Заполнить анкету</a>
+                <a class="boot boot-mob-menu hh" href="/#anketa" data-dismiss="modal">Заполнить анкету</a>
             </div>
         </div>
     </div>
@@ -164,7 +164,7 @@
             </div>
             <div class="aboutSectionButton">
                 <a class="boot boot-center d-none d-sm-table" href="about.html">Подробнее</a>
-                <a class="boot boot-center d-none d-sm-table" href="#anketa">Заполнить анкету</a>
+                <a class="boot boot-center d-none d-sm-table" href="/#anketa">Заполнить анкету</a>
             </div>
         </div>
     </section>
@@ -274,7 +274,7 @@
                         <p class="text-center">Хочешь быть обеспеченной и независимой? Наше агентство с радостью предоставит тебе такую возможность, если ты соответствуешь нашим невысоким требованиям.</p>
                         <div class="mt-3 justify-content-center" style="display: flex">
                             <button class="boot btn-pos hh mr-lg-1 d-none d-sm-block" href="#requirements">Наши требования</button>
-                            <button class="boot btn-pos hh ml-lg-1" href="#anketa">Заполнить анкету</button>
+                            <button class="boot btn-pos hh ml-lg-1" href="/#anketa">Заполнить анкету</button>
                         </div>
                     </div>
                 </div>
@@ -379,7 +379,7 @@
     <div class="container">
         <div class="row section-subtittle justify-content-center text-center">
             <div class="col-xl-12 pt-xl-5 pb-3">
-                Всего один шаг отделяет тебя от жизни VIP уровня! Просто <a class="hh" href="#anketa">заполни анкету</a> и отправь ее нам.
+                Всего один шаг отделяет тебя от жизни VIP уровня! Просто <a class="hh" href="/#anketa">заполни анкету</a> и отправь ее нам.
             </div>
             <div class="col-xl-12">
                 <p>* Если ты не подходишь под обозначенные параметры, но обладаешь красивой внешностью и потрясающей фигурой - смело заполняй анкету. Главное, чтобы ты адекватно оценивала собственную внешность.</p>
@@ -883,11 +883,11 @@
             <div class="col flex-column text-center pt-md-5">
                 <span>Premium Escort</span>
                 <ul class="social_link d-flex justify-content-center">
-                    <li><a href="#"><i class="fab fa-2x fa-vk"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fab fa-2x fa-pinterest"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-vk"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-instagram"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-facebook"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-linkedin"></i></a></li>
+                    <li><a href="/"><i class="fab fa-2x fa-pinterest"></i></a></li>
                 </ul>
                 <p>Мы не несём ответственность за рекламодателей, моделей и их материалы. На сайте представлены картинки типажей внешности. От 18 лет. Все знакомства / встречи проходят строго обоюдно.</p>
                 <a class="pol" href="privacy-policy.html">Политика конфиденциальности</a>
