replaced index.html with a "/"

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,9 +25,9 @@
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-xl navbar-dark">
-                    <a class="d-none d-xl-block navbar-brand" href="index.html#home">PREMIUM<span>ESCORT
+                    <a class="d-none d-xl-block navbar-brand" href="/#home">PREMIUM<span>ESCORT
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
-                    <a class="d-xl-none navbar-brand-mob" href="index.html#home">PREMIUM ESCORT</a>
+                    <a class="d-xl-none navbar-brand-mob" href="/#home">PREMIUM ESCORT</a>
                     <div class="row mob-menu-icons">
                         <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                         <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
                         <div class="collapse navbar-collapse main-menu-item justify-content-center" id="navbarSupportedContent">
                             <ul class="navbar-nav menu align-items-center">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="index.html">Главная</a>
+                                    <a class="nav-link active" href="/">Главная</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about.html">Об агентстве</a>
@@ -52,10 +52,10 @@
                                     <a class="nav-link" href="faq.html">FAQ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html#reviews">Отзывы</a>
+                                    <a class="nav-link" href="/#reviews">Отзывы</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html#contacts">Контакты</a>
+                                    <a class="nav-link" href="/#contacts">Контакты</a>
                                 </li>
                             </ul>
                         </div>
@@ -65,7 +65,7 @@
                             <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 123 45 67</a>
                             <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
                         </div>
-                        <a class="boot" href="index.html#anketa">Заполнить анкету</a>
+                        <a class="boot" href="/#anketa">Заполнить анкету</a>
 
                     </div>
                 </nav>
