--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="collapse navbar-collapse main-menu-item justify-content-center" id="navbarSupportedContent">
                             <ul class="navbar-nav menu align-items-center">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="index.html">Главная</a>
+                                    <a class="nav-link active" href="/">Главная</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about.html">Об агентстве</a>
